<?xml version="1.0"?>
<package>
  <name>robot_state</name>
  <version>0.1.0</version>
  <description>
      The robot_state package can be used to keep track of the state of the robot in a centralized way: all the nodes of the robot that need to be aware of the current robot state to make computations and take decision can get this knowledge from this node, so that there is no need for them to continuosly update their local information about the robot state, since it is enough to ask the robot_state node about it.
      The robot_state package provides a service to get the current robot state, and one to update it: when one of the other nodes notice that a state update is necessary, this node will notify the robot_state node about which is the new state of the robot. This is done to reduce the information that the other nodes have to send to robot_state node to let it be able to update the robot state.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="fabrizio1.casati@mail.polimi.it">Fabrizio Casati</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://wiki.ros.org/robot_state</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="fabrizio1.casati@mail.polimi.it">Fabrizio Casati</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
